2009-05-07  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/client-types/mb-wm-client-menu.c: Remove the negative
	coordinates code, it's not going to happen. Some fixes to Thomas'
	legacy menu layouting.

2009-05-06  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#111652 legacy widget : application menu is not horizontally
	aligned application title text
	
	* matchbox/client-types/mb-wm-client-menu.c:
	Legacy app menus are positioned according to the
	position of the window title.
	* matchbox/theme-engines/mb-wm-theme.c:
	* matchbox/theme-engines/mb-wm-theme.h:
	Add accessor to retrieve the position of the window title.

2009-05-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Now, try to deal with preexisting fullscreen clients correctly,
	for real.

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
	  Do create xwin_frame for fs clients but don't reparent them;
	  rather reparent them to the root window.  This way base_display_sync()
	  won't be confused by the lack of xwin_frame.
	* matchbox/core/mb-wm-client-base.h (MB_WM_DBG_SKIP_UNMAPS):
	  Macro for skip_unmaps debugging.
	* matchbox/core/mb-window-manager.c:
	  Use it.

2009-05-06  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.37

2009-05-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#114681 Application shortcuts in the home view are getting opened
		  when tapped here and there in camera application UI.

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
	  Reverting madam's change not to freak out when we start handling
	  preexisting fullscreen clients.  Breaks initially fullscreen
	  clients when they wants to unmap--we get skip_unmaps wrong.

2009-05-05  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Applied a patch from Laszlo for NB#113598:
	* matchbox/core/mb-wm-decor.c (mb_wm_decor_destroy): Remove
	ButtonRelease handler as well.
	(mb_wm_decor_button_destroy): Move code from
	mb_wm_decor_button_unrealize to here.
