@@ -1,6 +1,15 @@
 matchbox-window-manager-2 (0.2.38-1~unreleased) unstable; urgency=low
 
-  * writeme
+  Laszlo:
+  * Fixes: NB#109299 - Transient windows are not reshown together with parent
+    -> lock
+
+  Thomas & Kimmo:
+  * Fixes: NB#111652 - legacy widget : application menu is not horizontally
+    aligned application title text
+
+  Adam:
+  * Now try to deal with preexisting fullscreen clients correctly, for real.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed,  6 May 2009 10:33:45 +0300
 
